// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreviewBody /> should hide vote button if proposal is archived 1`] = `
<Body>
  <div
    className="flex-1"
  >
    <Relay(ProposalPreviewUser)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": true,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
    />
    <hr />
    <a
      href="http://plateform/project1/step1/proposal1"
    >
      <Title
        tagName="h4"
      >
        <Truncate
          ellipsis="…"
          lines={3}
          trimWhitespace={false}
          width={0}
        >
          proposalTitle
        </Truncate>
      </Title>
    </a>
    <p
      className="excerpt small"
    >
      <WYSIWYGRender
        value="summaryOrBodyExcerpt"
      />
    </p>
    <TagsList>
      <Tag
        icon="cap cap-tag-1-1 icon--blue"
      >
        string
      </Tag>
      <Relay(ProposalDetailEstimation)
        proposal={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "category": Object {
              "name": "string",
            },
            "currentVotableStep": Object {
              "id": "step1",
              "votesRanking": true,
            },
            "district": Object {
              "name": "district9",
            },
            "form": Object {
              "objectType": "PROPOSAL",
            },
            "id": "proposal1",
            "isArchived": true,
            "media": Object {
              "name": "media1",
              "url": "http://image.png",
            },
            "slug": "proposal-title",
            "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
            "theme": Object {
              "title": "themeI",
            },
            "title": "proposalTitle",
            "trashed": false,
            "trashedStatus": "INVISIBLE",
            "url": "http://plateform/project1/step1/proposal1",
          }
        }
        showNullEstimation={false}
      />
      <Relay(Connect(injectIntl(ProposalDetailLikers)))
        proposal={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "category": Object {
              "name": "string",
            },
            "currentVotableStep": Object {
              "id": "step1",
              "votesRanking": true,
            },
            "district": Object {
              "name": "district9",
            },
            "form": Object {
              "objectType": "PROPOSAL",
            },
            "id": "proposal1",
            "isArchived": true,
            "media": Object {
              "name": "media1",
              "url": "http://image.png",
            },
            "slug": "proposal-title",
            "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
            "theme": Object {
              "title": "themeI",
            },
            "title": "proposalTitle",
            "trashed": false,
            "trashedStatus": "INVISIBLE",
            "url": "http://plateform/project1/step1/proposal1",
          }
        }
      />
    </TagsList>
  </div>
  <Flex
    className="proposal__buttons mt-15"
  >
    <ProposalFollowButton
      isAuthenticated={true}
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": true,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
    />
  </Flex>
  <div
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <Relay(ProposalVoteThresholdProgressBar)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": true,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": true,
          "id": "step1",
          "project": Object {
            "opinionCanBeFollowed": true,
          },
          "url": "/step",
          "voteThreshold": 2,
          "voteType": "SIMPLE",
        }
      }
    />
  </div>
</Body>
`;

exports[`<ProposalPreviewBody /> should render a proposal preview 1`] = `
<Body>
  <div
    className="flex-1"
  >
    <Relay(ProposalPreviewUser)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": false,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
    />
    <hr />
    <a
      href="http://plateform/project1/step1/proposal1"
    >
      <Title
        tagName="h4"
      >
        <Truncate
          ellipsis="…"
          lines={3}
          trimWhitespace={false}
          width={0}
        >
          proposalTitle
        </Truncate>
      </Title>
    </a>
    <p
      className="excerpt small"
    >
      <WYSIWYGRender
        value="summaryOrBodyExcerpt"
      />
    </p>
    <TagsList>
      <Tag
        icon="cap cap-tag-1-1 icon--blue"
      >
        string
      </Tag>
      <Relay(ProposalDetailEstimation)
        proposal={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "category": Object {
              "name": "string",
            },
            "currentVotableStep": Object {
              "id": "step1",
              "votesRanking": true,
            },
            "district": Object {
              "name": "district9",
            },
            "form": Object {
              "objectType": "PROPOSAL",
            },
            "id": "proposal1",
            "isArchived": false,
            "media": Object {
              "name": "media1",
              "url": "http://image.png",
            },
            "slug": "proposal-title",
            "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
            "theme": Object {
              "title": "themeI",
            },
            "title": "proposalTitle",
            "trashed": false,
            "trashedStatus": "INVISIBLE",
            "url": "http://plateform/project1/step1/proposal1",
          }
        }
        showNullEstimation={false}
      />
      <Relay(Connect(injectIntl(ProposalDetailLikers)))
        proposal={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "category": Object {
              "name": "string",
            },
            "currentVotableStep": Object {
              "id": "step1",
              "votesRanking": true,
            },
            "district": Object {
              "name": "district9",
            },
            "form": Object {
              "objectType": "PROPOSAL",
            },
            "id": "proposal1",
            "isArchived": false,
            "media": Object {
              "name": "media1",
              "url": "http://image.png",
            },
            "slug": "proposal-title",
            "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
            "theme": Object {
              "title": "themeI",
            },
            "title": "proposalTitle",
            "trashed": false,
            "trashedStatus": "INVISIBLE",
            "url": "http://plateform/project1/step1/proposal1",
          }
        }
      />
    </TagsList>
  </div>
  <Flex
    className="proposal__buttons mt-15"
  >
    <ProposalPreviewVote
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": false,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": true,
          "id": "step1",
          "project": Object {
            "opinionCanBeFollowed": true,
          },
          "url": "/step",
          "voteThreshold": 2,
          "voteType": "SIMPLE",
        }
      }
      viewer={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <ProposalFollowButton
      isAuthenticated={true}
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": false,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
    />
  </Flex>
  <div
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <Relay(ProposalVoteThresholdProgressBar)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "category": Object {
            "name": "string",
          },
          "currentVotableStep": Object {
            "id": "step1",
            "votesRanking": true,
          },
          "district": Object {
            "name": "district9",
          },
          "form": Object {
            "objectType": "PROPOSAL",
          },
          "id": "proposal1",
          "isArchived": false,
          "media": Object {
            "name": "media1",
            "url": "http://image.png",
          },
          "slug": "proposal-title",
          "summaryOrBodyExcerpt": "summaryOrBodyExcerpt",
          "theme": Object {
            "title": "themeI",
          },
          "title": "proposalTitle",
          "trashed": false,
          "trashedStatus": "INVISIBLE",
          "url": "http://plateform/project1/step1/proposal1",
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": true,
          "id": "step1",
          "project": Object {
            "opinionCanBeFollowed": true,
          },
          "url": "/step",
          "voteThreshold": 2,
          "voteType": "SIMPLE",
        }
      }
    />
  </div>
</Body>
`;
